--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	<div ng-if="broughtItemAdder.check()" class="error">{{broughtItemAdder.emptyMessage}}</div>
 	<ol>
 		<li ng-repeat="item in broughtItemAdder.broughtitems">
-			Brought  {{item.quantity}} {{item.name}}
+			Already Brought  {{item.quantity}} {{item.name}}
 		</li>
 	</ol>
 </div>
